Compiler/Parser.output
Nonterminals useless in grammar

    switch_case
    case_list
    case
    case_default
    size_of_stmt
    special_type


Terminals unused in grammar

    ERROR
    SWITCH
    CASE
    DEFAULT
    SIZEOF
    TERNARY
    CARDINAL
    ARROW
    DEFINE
    POINTER
    ADDRESS_OF
    OTHER
    DOT
    QUOTE


Rules useless in grammar

  169 switch_case: SWITCH LPAREN ID RPAREN LEFT_BRACE case_list RIGHT_BRACE
  170            | SWITCH LPAREN ID RPAREN LEFT_BRACE case_list case_default RIGHT_BRACE
  171            | SWITCH LPAREN expr RPAREN LEFT_BRACE case_list RIGHT_BRACE
  172            | SWITCH LPAREN expr RPAREN LEFT_BRACE case_list case_default RIGHT_BRACE

  173 case_list: case_list case
  174          | case

  175 case: CASE NUM COLON stmts BREAK
  176     | CASE NUM COLON stmt

  177 case_default: DEFAULT COLON stmts BREAK
  178             | DEFAULT COLON stmt

  179 size_of_stmt: SIZEOF LPAREN ID RPAREN
  180             | SIZEOF LPAREN type RPAREN
  181             | SIZEOF LPAREN special_type ID RPAREN

  182 special_type: STRUCT
  183             | TYPEDEF
  184             | ENUM
  185             | UNION


State 0 conflicts: 9 shift/reduce
State 15 conflicts: 9 shift/reduce
State 56 conflicts: 13 shift/reduce, 14 reduce/reduce
State 58 conflicts: 13 shift/reduce, 14 reduce/reduce
State 61 conflicts: 13 shift/reduce, 14 reduce/reduce
State 68 conflicts: 13 shift/reduce, 14 reduce/reduce
State 90 conflicts: 9 shift/reduce
State 91 conflicts: 9 shift/reduce
State 94 conflicts: 9 shift/reduce
State 96 conflicts: 9 shift/reduce
State 131 conflicts: 10 shift/reduce
State 176 conflicts: 9 shift/reduce
State 179 conflicts: 9 shift/reduce
State 186 conflicts: 9 shift/reduce
State 195 conflicts: 9 shift/reduce
State 214 conflicts: 9 shift/reduce
State 233 conflicts: 2 shift/reduce
State 249 conflicts: 2 reduce/reduce
State 250 conflicts: 9 shift/reduce
State 253 conflicts: 9 shift/reduce
State 259 conflicts: 2 shift/reduce
State 260 conflicts: 2 shift/reduce
State 271 conflicts: 9 shift/reduce
State 272 conflicts: 1 shift/reduce
State 274 conflicts: 1 shift/reduce
State 290 conflicts: 9 shift/reduce
State 291 conflicts: 9 shift/reduce
State 292 conflicts: 9 shift/reduce
State 298 conflicts: 1 shift/reduce
State 299 conflicts: 1 shift/reduce
State 300 conflicts: 9 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: prog endfile
    2     | prog global_stmt
    3     | global_stmt

    4 global_stmt: func_declaration
    5            | declaration_stmt SEMI
    6            | instantiation_stmt SEMI

    7 stmts: stmts stmt
    8      | stmt

    9 stmt: goto_stmt
   10     | label
   11     | if_stmt
   12     | for_stmt
   13     | while_stmt
   14     | do_while_stmt SEMI
   15     | return_stmt SEMI
   16     | declaration_stmt SEMI
   17     | assignment_stmt SEMI
   18     | instantiation_stmt SEMI
   19     | CONTINUE SEMI
   20     | BREAK SEMI

   21 assignment_stmt: ID assign_op expr
   22                | unary_op ID
   23                | ID unary_op
   24                | ID assign_op LEFT_BRACE expr RIGHT_BRACE
   25                | ID LEFT_BRACKET expr RIGHT_BRACKET assign_op expr

   26 declaration_stmt: variable_declaration
   27                 | array_declaration
   28                 | struct_declaration
   29                 | enum_declaration
   30                 | union_declaration
   31                 | typeDef_declaration

   32 variable_declaration: prefixes type ID
   33                     | prefixes type ID assign_op expr

   34 array_declaration: prefixes type ID LEFT_BRACKET expr RIGHT_BRACKET
   35                  | prefixes type ID LEFT_BRACKET expr RIGHT_BRACKET assign_op LEFT_BRACE expr RIGHT_BRACE

   36 func_declaration: prefixes type ID LPAREN func_parameters_declaration RPAREN compound_stmt
   37                 | prefixes type ID LPAREN func_parameters_declaration RPAREN SEMI

   38 func_parameters_declaration: ε
   39                            | func_parameters_declaration COMMA variable_declaration
   40                            | variable_declaration
   41                            | VOID

   42 data_struct_stmts: ε
   43                  | data_struct_stmts declaration_stmt SEMI
   44                  | data_struct_stmts func_declaration SEMI
   45                  | declaration_stmt SEMI
   46                  | func_declaration SEMI

   47 struct_declaration: STRUCT ID LEFT_BRACE data_struct_stmts RIGHT_BRACE

   48 union_declaration: UNION ID LEFT_BRACE data_struct_stmts RIGHT_BRACE

   49 enum_declaration: ENUM ID LEFT_BRACE enum_parameters RIGHT_BRACE

   50 enum_parameters: ε
   51                | enum_parameters COMMA ID
   52                | ID

   53 typeDef_declaration: TYPEDEF enum_declaration ID
   54                    | TYPEDEF ENUM LEFT_BRACE enum_parameters RIGHT_BRACE ID
   55                    | TYPEDEF union_declaration ID
   56                    | TYPEDEF UNION LEFT_BRACE data_struct_stmts RIGHT_BRACE ID
   57                    | TYPEDEF struct_declaration ID
   58                    | TYPEDEF STRUCT LEFT_BRACE data_struct_stmts RIGHT_BRACE ID
   59                    | TYPEDEF type ID

   60 instantiation_stmt: struct_inst
   61                   | union_inst
   62                   | func_inst

   63 struct_inst: STRUCT ID ID

   64 union_inst: UNION ID ID

   65 func_inst: ID LPAREN func_inst_parameters RPAREN

   66 func_inst_parameters: ε
   67                     | func_inst_parameters COMMA expr
   68                     | expr
   69                     | VOID

   70 expr: expr op term
   71     | expr comp_op term
   72     | expr bitwise_op term
   73     | expr logical_op term
   74     | term

   75 term: term prio_op operand
   76     | operand

   77 operand: unary_op factor
   78        | factor unary_op
   79        | type_cast factor
   80        | LOGICAL_NOT factor
   81        | factor

   82 factor: LPAREN expr RPAREN
   83       | NUM
   84       | ID
   85       | FNUM
   86       | func_inst

   87 op: PLUS
   88   | MINUS
   89   | RIGHT_SHIFT
   90   | LEFT_SHIFT

   91 prio_op: TIMES
   92        | OVER
   93        | PERCENT

   94 unary_op: INCREMENT
   95         | DECREMENT

   96 comp_op: GREATER_THAN
   97        | LESS_THAN_OR_EQUAL
   98        | GREATER_THAN_OR_EQUAL
   99        | LESS_THAN
  100        | EQUAL
  101        | NOT_EQUAL

  102 logical_op: LOGICAL_AND
  103           | LOGICAL_OR

  104 bitwise_op: BITWISE_AND
  105           | BITWISE_NOT
  106           | BITWISE_OR
  107           | BITWISE_XOR

  108 assign_op: ASSIGN
  109          | PLUS_ASSIGN
  110          | MINUS_ASSIGN
  111          | MODULUS_ASSIGN
  112          | LEFT_SHIFT_ASSIGN
  113          | RIGHT_SHIFT_ASSIGN
  114          | BITWISE_AND_ASSIGN
  115          | BITWISE_OR_ASSIGN
  116          | BITWISE_XOR_ASSIGN
  117          | MULTIPLY_ASSIGN
  118          | DIVIDE_ASSIGN

  119 compound_stmt: LEFT_BRACE stmts RIGHT_BRACE
  120              | LEFT_BRACE RIGHT_BRACE

  121 if_stmt: IF LPAREN condition RPAREN compound_stmt
  122        | IF LPAREN condition RPAREN compound_stmt elseif_stmt
  123        | IF LPAREN condition RPAREN compound_stmt else_stmt
  124        | IF LPAREN condition RPAREN stmt
  125        | IF LPAREN condition RPAREN stmt elseif_stmt
  126        | IF LPAREN condition RPAREN stmt else_stmt
  127        | IF LPAREN condition RPAREN SEMI

  128 elseif_stmt: elseif_stmt ELSEIF LPAREN condition RPAREN stmt
  129            | elseif_stmt ELSEIF LPAREN condition RPAREN compound_stmt
  130            | ELSEIF LPAREN condition RPAREN stmt
  131            | ELSEIF LPAREN condition RPAREN stmt else_stmt
  132            | ELSEIF LPAREN condition RPAREN compound_stmt
  133            | ELSEIF LPAREN condition RPAREN compound_stmt else_stmt

  134 else_stmt: ELSE stmt
  135          | ELSE compound_stmt

  136 do_while_stmt: DO compound_stmt WHILE LPAREN condition RPAREN
  137              | DO stmt WHILE LPAREN LPAREN condition RPAREN

  138 while_stmt: WHILE LPAREN condition RPAREN compound_stmt
  139           | WHILE LPAREN condition RPAREN stmt
  140           | WHILE LPAREN condition RPAREN SEMI

  141 for_stmt: FOR LPAREN condition SEMI condition SEMI condition RPAREN compound_stmt
  142         | FOR LPAREN condition SEMI condition SEMI condition RPAREN stmt
  143         | FOR LPAREN variable_declaration SEMI condition SEMI condition RPAREN compound_stmt
  144         | FOR LPAREN variable_declaration SEMI condition SEMI condition RPAREN stmt

  145 condition: expr
  146          | assignment_stmt

  147 return_stmt: RETURN expr

  148 goto_stmt: GOTO ID SEMI

  149 label: ID COLON

  150 endfile: ENDFILE

  151 type: INT
  152     | FLOAT
  153     | DOUBLE
  154     | CHAR
  155     | VOID

  156 prefixes: ε
  157         | prefixes prefix
  158         | prefix

  159 prefix: EXTERN
  160       | LONG
  161       | SHORT
  162       | STATIC
  163       | SIGNED
  164       | UNSIGNED
  165       | VOLATILE
  166       | REGISTER
  167       | CONSTANT

  168 type_cast: LPAREN type RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ENDFILE (258) 150
    ERROR (259)
    IF (260) 121 122 123 124 125 126 127
    ELSEIF (261) 128 129 130 131 132 133
    ELSE (262) 134 135
    DO (263) 136 137
    WHILE (264) 136 137 138 139 140
    FOR (265) 141 142 143 144
    SWITCH (266)
    CASE (267)
    DEFAULT (268)
    RETURN (269) 147
    BREAK (270) 20
    INT (271) 151
    FLOAT (272) 152
    DOUBLE (273) 153
    CHAR (274) 154
    VOID (275) 41 69 155
    STRUCT (276) 47 58 63
    TYPEDEF (277) 53 54 55 56 57 58 59
    CONTINUE (278) 19
    EXTERN (279) 159
    GOTO (280) 148
    LONG (281) 160
    ENUM (282) 49 54
    REGISTER (283) 166
    SHORT (284) 161
    SIZEOF (285)
    STATIC (286) 162
    SIGNED (287) 163
    UNION (288) 48 56 64
    UNSIGNED (289) 164
    VOLATILE (290) 165
    NUM <intval> (291) 83
    ID <identifier> (292) 21 22 23 24 25 32 33 34 35 36 37 47 48 49 51 52 53 54 55 56 57 58 59 63 64 65 84 148 149
    FNUM <floatval> (293) 85
    ASSIGN (294) 108
    PLUS (295) 87
    MINUS (296) 88
    TIMES (297) 91
    OVER (298) 92
    PERCENT (299) 93
    LPAREN (300) 36 37 65 82 121 122 123 124 125 126 127 128 129 130 131 132 133 136 137 138 139 140 141 142 143 144 168
    RPAREN (301) 36 37 65 82 121 122 123 124 125 126 127 128 129 130 131 132 133 136 137 138 139 140 141 142 143 144 168
    LEFT_BRACE (302) 24 35 47 48 49 54 56 58 119 120
    RIGHT_BRACE (303) 24 35 47 48 49 54 56 58 119 120
    LEFT_BRACKET (304) 25 34 35
    RIGHT_BRACKET (305) 25 34 35
    TERNARY (306)
    SEMI (307) 5 6 14 15 16 17 18 19 20 37 43 44 45 46 127 140 141 142 143 144 148
    COLON (308) 149
    COMMA (309) 39 51 67
    INCREMENT (310) 94
    DECREMENT (311) 95
    BITWISE_AND (312) 104
    BITWISE_OR (313) 106
    BITWISE_NOT (314) 105
    BITWISE_XOR (315) 107
    LOGICAL_NOT (316) 80
    LOGICAL_AND (317) 102
    LOGICAL_OR (318) 103
    EQUAL (319) 100
    NOT_EQUAL (320) 101
    LESS_THAN (321) 99
    GREATER_THAN (322) 96
    LESS_THAN_OR_EQUAL (323) 97
    GREATER_THAN_OR_EQUAL (324) 98
    RIGHT_SHIFT (325) 89
    LEFT_SHIFT (326) 90
    PLUS_ASSIGN (327) 109
    MINUS_ASSIGN (328) 110
    LEFT_SHIFT_ASSIGN (329) 112
    RIGHT_SHIFT_ASSIGN (330) 113
    BITWISE_AND_ASSIGN (331) 114
    BITWISE_OR_ASSIGN (332) 115
    BITWISE_XOR_ASSIGN (333) 116
    MULTIPLY_ASSIGN (334) 117
    DIVIDE_ASSIGN (335) 118
    MODULUS_ASSIGN (336) 111
    CARDINAL (337)
    ARROW (338)
    DEFINE (339)
    CONSTANT (340) 167
    POINTER (341)
    ADDRESS_OF (342)
    OTHER (343)
    DOT (344)
    QUOTE (345)


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    prog (92)
        on left: 1 2 3
        on right: 0 1 2
    global_stmt (93)
        on left: 4 5 6
        on right: 2 3
    stmts (94)
        on left: 7 8
        on right: 7 119
    stmt (95)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 7 8 124 125 126 128 130 131 134 137 139 142 144
    assignment_stmt (96)
        on left: 21 22 23 24 25
        on right: 17 146
    declaration_stmt (97)
        on left: 26 27 28 29 30 31
        on right: 5 16 43 45
    variable_declaration (98)
        on left: 32 33
        on right: 26 39 40 143 144
    array_declaration (99)
        on left: 34 35
        on right: 27
    func_declaration (100)
        on left: 36 37
        on right: 4 44 46
    func_parameters_declaration (101)
        on left: 38 39 40 41
        on right: 36 37 39
    data_struct_stmts (102)
        on left: 42 43 44 45 46
        on right: 43 44 47 48 56 58
    struct_declaration (103)
        on left: 47
        on right: 28 57
    union_declaration (104)
        on left: 48
        on right: 30 55
    enum_declaration (105)
        on left: 49
        on right: 29 53
    enum_parameters (106)
        on left: 50 51 52
        on right: 49 51 54
    typeDef_declaration (107)
        on left: 53 54 55 56 57 58 59
        on right: 31
    instantiation_stmt (108)
        on left: 60 61 62
        on right: 6 18
    struct_inst (109)
        on left: 63
        on right: 60
    union_inst (110)
        on left: 64
        on right: 61
    func_inst (111)
        on left: 65
        on right: 62 86
    func_inst_parameters (112)
        on left: 66 67 68 69
        on right: 65 67
    expr (113)
        on left: 70 71 72 73 74
        on right: 21 24 25 33 34 35 67 68 70 71 72 73 82 145 147
    term (114)
        on left: 75 76
        on right: 70 71 72 73 74 75
    operand (115)
        on left: 77 78 79 80 81
        on right: 75 76
    factor (116)
        on left: 82 83 84 85 86
        on right: 77 78 79 80 81
    op (117)
        on left: 87 88 89 90
        on right: 70
    prio_op (118)
        on left: 91 92 93
        on right: 75
    unary_op (119)
        on left: 94 95
        on right: 22 23 77 78
    comp_op (120)
        on left: 96 97 98 99 100 101
        on right: 71
    logical_op (121)
        on left: 102 103
        on right: 73
    bitwise_op (122)
        on left: 104 105 106 107
        on right: 72
    assign_op (123)
        on left: 108 109 110 111 112 113 114 115 116 117 118
        on right: 21 24 25 33 35
    compound_stmt (124)
        on left: 119 120
        on right: 36 121 122 123 129 132 133 135 136 138 141 143
    if_stmt (125)
        on left: 121 122 123 124 125 126 127
        on right: 11
    elseif_stmt (126)
        on left: 128 129 130 131 132 133
        on right: 122 125 128 129
    else_stmt (127)
        on left: 134 135
        on right: 123 126 131 133
    do_while_stmt (128)
        on left: 136 137
        on right: 14
    while_stmt (129)
        on left: 138 139 140
        on right: 13
    for_stmt (130)
        on left: 141 142 143 144
        on right: 12
    condition (131)
        on left: 145 146
        on right: 121 122 123 124 125 126 127 128 129 130 131 132 133 136 137 138 139 140 141 142 143 144
    return_stmt (132)
        on left: 147
        on right: 15
    goto_stmt (133)
        on left: 148
        on right: 9
    label (134)
        on left: 149
        on right: 10
    endfile (135)
        on left: 150
        on right: 1
    type (136)
        on left: 151 152 153 154 155
        on right: 32 33 34 35 36 37 59 168
    prefixes (137)
        on left: 156 157 158
        on right: 32 33 34 35 36 37 157
    prefix (138)
        on left: 159 160 161 162 163 164 165 166 167
        on right: 157 158
    type_cast (139)
        on left: 168
        on right: 79


State 0

    0 $accept: • prog $end

    STRUCT    shift, and go to state 1
    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    LONG      shift, and go to state 4
    ENUM      shift, and go to state 5
    REGISTER  shift, and go to state 6
    SHORT     shift, and go to state 7
    STATIC    shift, and go to state 8
    SIGNED    shift, and go to state 9
    UNION     shift, and go to state 10
    UNSIGNED  shift, and go to state 11
    VOLATILE  shift, and go to state 12
    ID        shift, and go to state 13
    CONSTANT  shift, and go to state 14

    EXTERN    [reduce using rule 156 (prefixes)]
    LONG      [reduce using rule 156 (prefixes)]
    REGISTER  [reduce using rule 156 (prefixes)]
    SHORT     [reduce using rule 156 (prefixes)]
    STATIC    [reduce using rule 156 (prefixes)]
    SIGNED    [reduce using rule 156 (prefixes)]
    UNSIGNED  [reduce using rule 156 (prefixes)]
    VOLATILE  [reduce using rule 156 (prefixes)]
    CONSTANT  [reduce using rule 156 (prefixes)]
    $default  reduce using rule 156 (prefixes)

    prog                  go to state 15
    global_stmt           go to state 16
    declaration_stmt      go to state 17
    variable_declaration  go to state 18
    array_declaration     go to state 19
    func_declaration      go to state 20
    struct_declaration    go to state 21
    union_declaration     go to state 22
    enum_declaration      go to state 23
    typeDef_declaration   go to state 24
    instantiation_stmt    go to state 25
    struct_inst           go to state 26
    union_inst            go to state 27
    func_inst             go to state 28
    prefixes              go to state 29
    prefix                go to state 30


State 1

   47 struct_declaration: STRUCT • ID LEFT_BRACE data_struct_stmts RIGHT_BRACE
   63 struct_inst: STRUCT • ID ID

    ID  shift, and go to state 31


State 2

   53 typeDef_declaration: TYPEDEF • enum_declaration ID
   54                    | TYPEDEF • ENUM LEFT_BRACE enum_parameters RIGHT_BRACE ID
   55                    | TYPEDEF • union_declaration ID
   56                    | TYPEDEF • UNION LEFT_BRACE data_struct_stmts RIGHT_BRACE ID
   57                    | TYPEDEF • struct_declaration ID
   58                    | TYPEDEF • STRUCT LEFT_BRACE data_struct_stmts RIGHT_BRACE ID
   59                    | TYPEDEF • type ID

    INT     shift, and go to state 32
    FLOAT   shift, and go to state 33
    DOUBLE  shift, and go to state 34
    CHAR    shift, and go to state 35
    VOID    shift, and go to state 36
    STRUCT  shift, and go to state 37
    ENUM    shift, and go to state 38
    UNION   shift, and go to state 39

    struct_declaration  go to state 40
    union_declaration   go to state 41
    enum_declaration    go to state 42
    type                go to state 43


State 3

  159 prefix: EXTERN •

    $default  reduce using rule 159 (prefix)


State 4

  160 prefix: LONG •

    $default  reduce using rule 160 (prefix)


State 5

   49 enum_declaration: ENUM • ID LEFT_BRACE enum_parameters RIGHT_BRACE

    ID  shift, and go to state 44


State 6

  166 prefix: REGISTER •

    $default  reduce using rule 166 (prefix)


State 7

  161 prefix: SHORT •

    $default  reduce using rule 161 (prefix)


State 8

  162 prefix: STATIC •
